@@ -23,3 +23,5 @@ Alpha 0.4
 -- interface <name>
 - Loading configuration from configuration file
 - Stability fixes
+Alpha 0.5 - prev
+- iputils added to calculate some things under IPs
